Issue #2283821: Fixed error in workflow_node, when Upgrading from old D6/D7-version to 7.x-2.x.
Issue #2291411: Fixed broken link on Admin UI.
Issue #2217855: Fixed fatal error in workflow_actions when ConfigTransition has invalid target_state.
Issue #2187321: Fixed message when importing workflow.
Issue #2296843: Added more properties and functions to entities.
Issue #2296843: Added more properties and functions to entities - remove typo.
Issue #2205707: Added permission for workflow_comment_edit_link field handler from workflow_extensions.
Issue #2211145: Grouped workflow action buttons together with Drupal buttons ([Save], [Preview]).
Issue #2283821: Fixed error in hook_update_7007() due to schema changes, when Upgrading from old D6/D7-version to 7.x-2.x.
Fixed code style errors, as reported by pareview.sh and coder module.
Issue #2299883: Fixed invalid WorkflowConfigTransitions created when cloning a Workflow.
Issue #2299909: Removed 'delete'-link on Admin UI if Workflow is not deletable.
Issue #2211145: Fixed message when only 1 Workflow Action Button avilable on form.
Issue #2300497: Allow non-allowed transitions when $force is set.
Issue #2296843: Added more properties and functions to entities - use them in rest of codebase.
Issue #2211145: Added better performance when grouping workflow action buttons together with Drupal buttons ([Save], [Preview]).
Added message on Admin pages when both WorkflowNode and WorflowField are enabled.

Since 7.x-2.4
Issue #2303925 by tucho: Fixed error due to typo in workflow_features_pipe_field_base_alter().
Issue #2307303: Added IMPORT action to workflows, but this requires applying of patch #1967794 before it works.
Issue #2249187: Fixed overwriting of State Name by machine name when importing a Workflow.
Issue #2313549: Fixed workflows cannot be deleted in version 7.x-2.4
Issue #2317243: Fixed notice : Undefined variable: new_sid in workflownode_tokens().