@@ -182,7 +182,7 @@ class WorkflowDefaultWidget extends WorkflowD7Base { // D8: extends WidgetBase {
       return $element;  // <---- exit.
     }
 
-    // The 'options' widget. May be removed below if 'Action buttons' are chosen.
+    // The 'options' widget. May be removed later if 'Action buttons' are chosen.
     $workflow_label = check_plain(t($workflow->label()));
     $element['workflow']['workflow_sid'] = array(
       '#type' => $settings_options_type,
@@ -271,55 +271,44 @@ class WorkflowDefaultWidget extends WorkflowD7Base { // D8: extends WidgetBase {
     // Finally, add Submit buttons/Action buttons.
     // Either a default 'Submit' button is added, or a button per permitted state.
     if ($settings_options_type == 'buttons') {
-
-      // Performance: inform workflow_form_alter() to do its job.
-      _workflow_use_action_buttons(TRUE);
-
-      // The options widget set above is no longer valid.
-      $element['workflow']['workflow_sid']['#type'] = 'hidden';
-
       // How do action buttons work? See also d.o. issue #2187151.
       // Create 'action buttons' per state option. Set $sid property on each button.
       // 1. Admin sets ['widget']['options']['#type'] = 'buttons'.
-      // 2. This function creates 'action buttons' per state option; sets $sid property on each button.
+      // 2. This function formElelent() creates 'action buttons' per state option;
+      //    sets $sid property on each button.
       // 3. User clicks button.
       // 4. Callback _workflow_transition_form_validate_buttons() sets proper State.
       // 5. Callback _workflow_transition_form_validate_buttons() sets Submit function.
       // @todo: this does not work yet for the Add Comment form.
 
-      foreach ($options as $sid => $state_label) {
-        $element['workflow']['submit_sid'][$sid] = array(
-          '#type' => 'submit',
-          '#value' => $state_label,
-          '#validate' => array('_workflow_transition_form_validate_buttons'), // ($form, &$form_state)
-          // Add target State ID and Field name, to set correct value in validate_buttons callback.
-          '#workflow_sid' => $sid,
-          '#workflow_field_name' => $field_name,
-          // Put current state first.
-          '#weight' => ($sid != $current_sid),
-        );
-        // Add the submit function only if one provided. Set the submit_callback accordingly.
-        if (empty($instance['widget']['settings']['submit_function'])) {
-          // #submit Must be empty, or else the submit function is not called.
-          // $element['workflow']['submit_sid'][$sid]['#submit'] = array();
-          $element['workflow']['submit_sid'][$sid]['#executes_submit_callback'] = TRUE;
-        }
-        else {
-          $element['workflow']['submit_sid'][$sid]['#submit'] = array($instance['widget']['settings']['submit_function']);
-          $element['workflow']['submit_sid'][$sid]['#executes_submit_callback'] = TRUE;
-        }
-      }
+      // Performance: inform workflow_form_alter() to do its job.
+      _workflow_use_action_buttons(TRUE);
     }
-    elseif (!empty($instance['widget']['settings']['submit_function'])) {
+
+    $submit_functions = empty($instance['widget']['settings']['submit_function']) ? array() : array($instance['widget']['settings']['submit_function']);
+    if ($settings_options_type == 'buttons' || $submit_functions) {
+      $element['workflow']['actions']['#type'] = 'actions';
+      $element['workflow']['actions']['submit'] = array(
+        '#type' => 'submit',
+//        '#access' => TRUE,
+        '#value' => t('Update workflow'),
+        '#weight' => -5,
+//        '#submit' => array( isset($instance['widget']['settings']['submit_function']) ? $instance['widget']['settings']['submit_function'] : NULL),
+        // '#executes_submit_callback' => TRUE,
+        '#attributes' => array('class' => array('form-save-default-button')),
+      );
+
       // The 'add submit' can explicitely set by workflowfield_field_formatter_view(),
       // to add the submit button on the Content view page and the Workflow history tab.
       // Add a submit button, but only on Entity View and History page.
-      $element['workflow']['submit'] = array(
-        '#type' => 'submit',
-        '#value' => t('Update workflow'),
-        '#executes_submit_callback' => TRUE,
-        '#submit' => array($instance['widget']['settings']['submit_function']),
-      );
+      // Add the submit function only if one provided. Set the submit_callback accordingly.
+      if ($submit_functions) {
+        $element['workflow']['actions']['submit']['#submit'] = $submit_functions;
+      }
+      else {
+        // '#submit' Must be empty, or else the submit function is not called.
+        // $element['workflow']['actions']['submit']['#submit'] = array();
+      }
     }
     else {
       // In some cases, no submit callback function is specified. This is
