@@ -48,6 +48,8 @@ function workflow_tab_page($entity_type, $entity = NULL) {
   // to allow multiple forms per page (in listings, with hook_forms() ).
   // Ultimately, this is a wrapper for WorkflowDefaultWidget.
   $form['workflow_current_state'] = workflow_state_formatter($entity_type, $entity, $field, $instance, $current_sid);
+  // Set a proper weight, which works for Workflow Options in select list AND action buttons.
+  $form['workflow_current_state']['#weight'] = -0.005;
   $form += drupal_get_form(implode('_', array('workflow_transition_form', $entity_type, $entity_id, $field_id)), $field, $instance, $entity_type, $entity);
   $output = drupal_render($form);
 
