@@ -576,4 +576,6 @@ Issue #2303925 by tucho: Fixed error due to typo in workflow_features_pipe_field
 Issue #2307303: Added IMPORT action to workflows, but this requires applying of patch #1967794 before it works.
 Issue #2249187: Fixed overwriting of State Name by machine name when importing a Workflow.
 Issue #2313549: Fixed workflows cannot be deleted in version 7.x-2.4
-Issue #2317243: Fixed notice : Undefined variable: new_sid in workflownode_tokens().
+Issue #2317243: Fixed notice: Undefined variable: new_sid in workflownode_tokens().
+Issue #2305617 by emil.virkki: Fixed Action buttons bypass Field validations.
+ 
